# AMDP

./: .gitignore  README.md  index.html  package-lock.json  package.json  settings.html
.github/workflows/: ci.yml  release.yml
docs/: apple-music-rpc-devplan.md  code-signing.md  discord-developer-setup.md  setup-prerequisites.md
src/: main.ts  settings.css  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: album_art.rs  apple_music.rs  commands.rs  config.rs  discord_rpc.rs  lib.rs  main.rs  state.rs  tray.rs
