[package]
name = "amdp"
version = "0.3.1"
description = "Apple Music Discord Presence"
authors = ["you"]
edition = "2021"

[lib]
name = "amdp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
arboard = "3"
discord-rich-presence = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "6"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

